<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:id="@+id/College_image"
            android:src="@drawable/gehu"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/light"
            android:text="@string/about_college"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@string/light"
            android:text="@string/graphic_era_hill_university_dehradun_campus_is_located_in_the_cantonment_area_along_the_rajaji_national_park_against_the_panoramic_view_of_shivalik_hills_the_university_offers_perfect_ambience_for_all_academic_pursuits_health_growth_and_widening_of_mental_horizons_gehu_dehradun_campus_is_fully_equipped_with_state_of_the_art_computer_centres_and_labs_spacious_and_temperature_regulated_class_rooms_lecture_theatres_and_seminar_halls_accommodation_and_medical_facilities_and_our_very_own_radio_station_the_dehradun_campus_of_graphic_era_hill_university_has_been_acclaimed_and_honored_at_various_events_of_national_and_international_prominence"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Details"
                android:layout_marginTop="36dp"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/title_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@string/light"
                android:text="GRAPHIC ERA HILL UNIVERSITY(GEHU)"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@string/light"
                android:text="Bell Road,Clement Town Dehradun Uttrakhand"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@string/light"
                android:text="contact us- 01352645565, 01352645996"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@string/light"
                android:text="admissions@gehu.ac.in, enquiry@gehu.ac.in"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="Green Environment"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Branch"
            android:layout_marginTop="36dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/bold"/>

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/text_margin"
            android:foregroundGravity="center"
            android:clipToPadding="false"
            android:background="@color/grey2"
            android:overScrollMode="never"
            android:id="@+id/viewPager"/>

        <View
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey2" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>